--- a/APPVIEW/Views/Home/Index.cshtml
+++ b/APPVIEW/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
                     continue;
                 }
                 lstpr.Add(item.Id_Product);
-                <div class="col-md-6 col-lg-4 col-xl-3"  id="card">
+                <div class="card" style="width: 16rem; margin: 10px"  id="card">
                     <div class="card text-center card-product">
                         <div class="card-product__img">
                             @foreach (var img in Img)
