--- a/APPVIEW/Views/Shared/_LayoutWeb.cshtml
+++ b/APPVIEW/Views/Shared/_LayoutWeb.cshtml
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Supper Fashion - Trang chủ</title>
-    <link rel="icon" href="~/contentwebb/img/Fevicon.png" type="image/png">
+    <link rel="icon" href="./images/logoSuper.png" type="image/png">
     <link rel="stylesheet" href="~/contentwebb/vendors/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="~/contentwebb/vendors/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="~/contentwebb/vendors/themify-icons/themify-icons.css">
@@ -76,7 +76,7 @@
         <div class="main_menu">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
-                    <a class="navbar-brand logo_h" href="~/Home/index"><img src="~/contentwebb/img/logo.png" alt=""></a>
+                    <a class="navbar-brand logo_h" href="~/Home/index"><img src="~/images/logoSuper.png" alt="" style="width: 200px"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
@@ -85,9 +85,9 @@
                     </button>
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto mr-auto">
-                            <li class="nav-item active"><a class="nav-link" asp-action="Index" asp-controller="Home">Trang chủ</a></li>
+                            <li class="nav-item "><a class="nav-link" asp-action="Index" asp-controller="Home">Trang chủ</a></li>
 
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a  class="nav-link" asp-action="Shop" asp-controller="Home">Sản Phẩm</a>
                               @*  <ul class="dropdown-menu">
                                     <li class="nav-item"><a class="nav-link" >Sản Phẩm</a></li>
