--- a/APPVIEW/Views/Account/MyProfile.cshtml
+++ b/APPVIEW/Views/Account/MyProfile.cshtml
@@ -8,6 +8,35 @@
     string Id_userValue = IdUser?.Value;
 
 }
+<style>
+    .form-select{
+    width: 100px;
+    margin-top: -26px;
+    height: 38px 
+    }
+    .labels{
+         margin-bottom: 20px;
+    }
+      .nice-select .list{
+        width:100px;
+        }
+
+
+
+.button-register-login {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.button-register-login:hover {
+    background-color: #0056b3;
+}
+
+</style>
 <section class="blog-banner-area" id="category">
     <div class="container h-100">
         <div class="blog-banner">
@@ -35,12 +64,7 @@
                 <span class="text-black-50">@Model.Email</span>
             </div>
         </div>
-        <style>
 
-            .nice-select .list{
-                width: 300px;
-            }
-        </style>
         <div class="col-md-8">
             <div class="p-3 py-5">
                 <h4 class="text-right mb-4">Hồ sơ của Tôi</h4>
@@ -110,10 +134,6 @@
                         <div class="col-md-6">
                             <label asp-for=SpecificAddress class="labels">Địa chỉ cụ thể</label>
                             <input asp-for=SpecificAddress type="text" class="form-control" placeholder="Nhập địa chỉ cụ thể của bạn" value="@Model.SpecificAddress">
-                        </div>
-                        <div class="col-md-6">
-                            <label asp-for=DefaultAddress class="labels">Địa chỉ mặc định</label>
-                            <input asp-for=DefaultAddress type="text" class="form-control" placeholder="Nhập địa chỉ mặc định của bạn" value="@Model.DefaultAddress">
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -284,7 +304,3 @@
 
 
 </script>
-
-
-
-
