--- a/APPVIEW/Views/Shared/_ReturnProducts.cshtml
+++ b/APPVIEW/Views/Shared/_ReturnProducts.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="card-body">
                 <h4 class="card-product__title"><a href="#">@product.ProductDetail.Name</a></h4>
-                <p class="card-product__price">@product.ProductDetail.Price.ToString("C0", new CultureInfo("vi-VN"))</p>
+                <p class="card-product__price" style="color:#f15e2c">@product.ProductDetail.Price.ToString("C0", new CultureInfo("vi-VN"))</p>
             </div>
         </div>
     </div>
