--- a/APPVIEW/Views/Voucher/Edit.cshtml
+++ b/APPVIEW/Views/Voucher/Edit.cshtml
@@ -9,70 +9,70 @@
     <div class="col-xxl">
         <div class="card mb-4">
             <div class="card-header d-flex align-items-center justify-content-between">
-                <h5 class="mb-0">Edit a Voucher</h5>
+                <h5 class="mb-0">Sửa voucher</h5>
 
             </div>
             <div class="card-body">
                 <form asp-action="Edit" method="post">
                     <div class="row mb-3">
-                        <label asp-for="Value" class="col-sm-2 col-form-label">Value</label>
+                        <label asp-for="Value" class="col-sm-2 col-form-label">%</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" asp-for="Value" placeholder="Enter value of Voucher" />
+                            <input type="text" class="form-control" asp-for="Value" placeholder="Nhập %" />
                             <span asp-validation-for="Value" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="Name" class="col-sm-2 col-form-label">Name</label>
+                        <label asp-for="Name" class="col-sm-2 col-form-label">Tên</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" asp-for="Name" placeholder="Enter name of Voucher" />
+                            <input type="text" class="form-control" asp-for="Name" placeholder="Nhập tên" />
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="Code" class="col-sm-2 col-form-label">Code</label>
+                        <label asp-for="Code" class="col-sm-2 col-form-label">Mã</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" asp-for="Code" placeholder="Enter code of Voucher" />
+                            <input type="text" class="form-control" asp-for="Code" placeholder="Nhập mã" />
                             <span asp-validation-for="Code" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="DiscountAmount" class="col-sm-2 col-form-label">Maximum Discount Amount</label>
+                        <label asp-for="DiscountAmount" class="col-sm-2 col-form-label">Giảm tối đa</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" asp-for="DiscountAmount" placeholder="Enter maximum discount amount of Voucher" />
+                            <input type="text" class="form-control" asp-for="DiscountAmount" placeholder="NHập giảm tối đa" />
                             <span asp-validation-for="DiscountAmount" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="Quantity" class="col-sm-2 col-form-label">Quantity</label>
+                        <label asp-for="Quantity" class="col-sm-2 col-form-label">Số lượng</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" asp-for="Quantity" placeholder="Enter quantity of Voucher" />
+                            <input type="text" class="form-control" asp-for="Quantity" placeholder="Nhập số lượng" />
                             <span asp-validation-for="Quantity" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="StartDate" class="col-sm-2 col-form-label">StartDate</label>
+                        <label asp-for="StartDate" class="col-sm-2 col-form-label">Ngày bắt đầu</label>
                         <div class="col-sm-10">
                             <input asp-for="StartDate" class="form-control" />
                             <span asp-validation-for="StartDate" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="EndDate" class="col-sm-2 col-form-label">EndDate</label>
+                        <label asp-for="EndDate" class="col-sm-2 col-form-label">Ngày kết thúc</label>
                         <div class="col-sm-10">
-                            <input class="form-control" asp-for="EndDate"/>
+                            <input class="form-control" asp-for="EndDate" />
                             <span asp-validation-for="EndDate" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="Status" class="col-sm-2 col-form-label">Status</label>
+                        <label asp-for="Status" class="col-sm-2 col-form-label">Trạng thái</label>
                         <div class="col-sm-10 offset-sm-2">
                             <div class="form-check">
                                 <input asp-for="Status" name="status" class="form-check-input" checked type="radio" value="1" id="defaultRadio1" />
-                                <label class="form-check-label" asp-for="Status"> Use </label>
+                                <label class="form-check-label" asp-for="Status"> Sử dụng </label>
                             </div>
                             <div class="form-check">
-                                <input asp-for="Status" name="status" class="form-check-input"  type="radio" value="0" id="defaultRadio2" />
-                                <label class="form-check-label" for="defaultRadio2"> Not Use </label>
+                                <input asp-for="Status" name="status" class="form-check-input" type="radio" value="0" id="defaultRadio2" />
+                                <label class="form-check-label" for="defaultRadio2"> Không sử dụng </label>
                             </div>
                             <span asp-validation-for="Status" class="text-danger"></span>
                         </div>
@@ -80,11 +80,11 @@
                     <div class="row justify-content-end">
                         <div class="col-sm-10">
                             <button type="submit" class="btn btn-primary">
-                                <span class="mdi mdi-check-outline"></span> Submit
+                                <span class="mdi mdi-check-outline"></span> Sửa
                             </button>
                             <div class="btn-group ms-2">
                                 <a href="#" class="btn btn-danger waves-effect waves-light" onclick="goBack()">
-                                    <span class="mdi mdi-close"></span> Cancel
+                                    <span class="mdi mdi-close"></span> Hủy bỏ
                                 </a>
                                 <script>
                                     function goBack() {
